--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -10,7 +10,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>TDAGlassware2</servlet-name>
-		<url-pattern>/tdaglassware2</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
